asupersync-macros/tests/compile_fail/entry_bad_arg.rs
use asupersync_macros::main;

#[main(flavour = "current_thread")]
async fn main() {}
